Fix the border of the profile pic on small screens

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -218,6 +218,8 @@ img#profile-pic {
     border-radius: 50%;
     margin-left: 10%;
     margin-right: 2em;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 
